--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^0.16.0+1
-  firebase_core: ^0.7.0
+  firebase_auth: ^1.0.0
+  firebase_core: ^0.20.1
+  logger: ^0.9.4
 
 dev_dependencies:
   flutter_test:
