--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,13 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^0.16.0+1
-  firebase_auth: ^1.0.0
-  firebase_core: ^0.20.1
+  firebase_auth: ^0.20.1
+  firebase_core: ^0.7.0
+  get_it: ^5.0.6
+  google_sign_in: ^4.5.9
   logger: ^0.9.4
-
+  provider: ^4.3.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
